--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="bg-blue-900">
+<body class="bg-blue-900 font-mono
+scrollbar scrollbar-thumb-black scrollbar-track-white
+hover:scrollbar-thumb-gray-300">
   <app-root></app-root>
 </body>
 </html>
